--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+alabaster==0.7.13
 alembic==1.12.0
+aniso8601==9.0.1
+attrs==23.1.0
+Babel==2.13.0
 bcrypt==4.0.1
 blinker==1.6.2
 certifi==2023.7.22
@@ -7,33 +11,59 @@ charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 coverage==7.3.1
+docutils==0.18.1
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.5.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.5
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
 Flask-Testing==0.8.1
 gevent==23.9.1
 greenlet==3.0.0rc3
 gunicorn==21.2.0
 idna==3.4
+imagesize==1.4.1
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
 Mako==1.2.4
 MarkupSafe==2.1.3
+mistune==3.0.2
 packaging==23.1
 pluggy==1.3.0
 pycparser==2.21
+Pygments==2.16.1
 PyJWT==2.8.0
 pytest==7.4.2
 pytest-mock==3.11.1
 python-dotenv==1.0.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.30.2
 requests==2.31.0
+rpds-py==0.10.6
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.2.6
+sphinx-autodoc-typehints==1.24.0
+sphinx-rtd-theme==1.3.0
+sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-httpdomain==1.8.1
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
 urllib3==2.0.5
+waitress==2.1.2
 watchdog==3.0.0
 Werkzeug==3.0.0
 zerobouncesdk==1.1.0
